--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bootstrap-icons": "^1.0.0-alpha4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "process-env": "^1.1.0"
   }
 }
