--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-cache-ctrl": "^1.0.1",
     "express-session": "^1.17.1",
     "nodemon": "^2.0.4",
     "process-env": "^1.1.0"
