--- a/package.json
+++ b/package.json
@@ -20,8 +20,17 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-cache-ctrl": "^1.0.1",
+    "express-sanitizer": "^1.0.5",
     "express-session": "^1.17.1",
+    "express-validator": "^6.6.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.9.22",
+    "mongoose-timestamp": "^0.6.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "process-env": "^1.1.0"
   }
 }
