tried markdown amended blog

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "process-env": "^1.1.0"
+    "process-env": "^1.1.0",
+    "showdown": "^1.9.1"
   }
 }
